--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "axios": "^1.8.3",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.8",
+    "chartjs-adapter-date-fns": "^3.0.0",
+    "date-fns": "^4.1.0",
     "electron": "^35.0.2",
     "electron-is-dev": "^3.0.1",
     "react": "^18.2.0",
